<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <include layout="@layout/toolbar_food_tab" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/what_to_eat"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/food_suggesstion_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingBottom="30dp"
                    android:paddingEnd="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingStart="30dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="10dp"
                    android:text="@string/collection"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/view_more"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>