<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_toolbar_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_food_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/banhkhoai" />

            <TextView
                android:id="@+id/tv_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="Tên món ăn"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Tên danh mục"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_cook_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:drawableLeft="@drawable/ic_time"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_time"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="60 phút"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/tv_food_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Mô tả món ăn"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggle_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_toggle_selector"
                        android:textAllCaps="false"
                        android:textColor="@drawable/toggle_text_selector"
                        android:textOff="@string/how_to_cook"
                        android:textOn="@string/how_to_cook" />

                    <ToggleButton
                        android:id="@+id/toggle_ingredient"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_toggle_selector"
                        android:textAllCaps="false"
                        android:textColor="@drawable/toggle_text_selector"
                        android:textOff="@string/ingredient"
                        android:textOn="@string/ingredient" />

                    <ToggleButton
                        android:id="@+id/toggle_video"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_toggle_selector"
                        android:textAllCaps="false"
                        android:textColor="@drawable/toggle_text_selector"
                        android:textOff="@string/video"
                        android:textOn="@string/video" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/content_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:minHeight="50dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/layout_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_food_selected"
                            android:drawableStart="@drawable/ic_food_selected"
                            android:gravity="center"
                            android:text="@string/notice"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp"
                            android:textStyle="italic" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/list_step"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_ingredient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ingredient"
                                android:layout_centerVertical="true"
                                android:textAllCaps="true"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold"
                                android:textSize="18sp"/>
                            <TextView
                                android:id="@+id/tv_number_of_people"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Cho 1 người"
                                android:textAllCaps="false"
                                android:layout_centerVertical="true"
                                android:padding="10dp"
                                android:textColor="@color/colorAccent"
                                android:layout_toStartOf="@id/btn_sub_person"
                                android:layout_toLeftOf="@id/btn_sub_person"/>
                            <Button
                                android:id="@+id/btn_sub_person"
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:text="-"
                                android:textColor="@color/colorAccent"
                                android:background="@drawable/bg_btn_sub"
                                android:layout_toStartOf="@id/btn_add_person"
                                android:layout_toLeftOf="@id/btn_add_person"
                                />
                            <Button
                                android:id="@+id/btn_add_person"
                                android:layout_width="50dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_height="40dp"
                                android:textColor="@color/colorAccent"
                                android:background="@drawable/bg_btn_add"
                                android:text="+"
                                />
                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/list_ingredient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <fragment
                            android:id="@+id/fragment_youtube_player"
                            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>